fixed add check

--- a/src/frontend/TuneShare/src/app/add-playlist/add-playlist.component.html
+++ b/src/frontend/TuneShare/src/app/add-playlist/add-playlist.component.html
@@ -9,8 +9,8 @@
   </ul>
   <div class="mainContainer pt-3">
     <h4 class="mb-3 text-center">Choose playlist to import</h4>
-    <app-playlistList [playlists]="playlistsSpotify" *ngIf="spotify && linkedSpotify"></app-playlistList>
-    <app-playlistList [playlists]="playlistsApplemusic" *ngIf="!spotify && linkedApplemusic"></app-playlistList>
+    <app-playlistList [playlists]="playlistsSpotify" [ngClass]="{ 'd-none': !(spotify && linkedSpotify)} "></app-playlistList>
+    <app-playlistList [playlists]="playlistsApplemusic" [ngClass]="{'d-none' : !(!spotify && linkedApplemusic)}"></app-playlistList>
     <div *ngIf="empty && (linkedSpotify && spotify || linkedApplemusic && !spotify)" class="text-center mt-5"><h5>No
       playlists available!</h5>
     </div>
