added quick links homepage

--- a/src/frontend/TuneShare/src/app/playlist-rotate/playlist-rotate.component.html
+++ b/src/frontend/TuneShare/src/app/playlist-rotate/playlist-rotate.component.html
@@ -1,4 +1,4 @@
-<h2 class="mb-4 text-center">{{ title }}</h2>
+<h2 class="mb-4 text-center"><a href="/profile?p={{ this.playlists[0].owner_id }}" style="text-decoration: none; color: black">{{ title }}</a></h2>
 
 <div id="{{ carouselId }}" class="carousel slide" data-bs-interval="false" data-pause="hover">
   <div class="carousel-inner rotatecontainer">
