--- a/src/frontend/TuneShare/src/app/playlist/playlist.component.scss
+++ b/src/frontend/TuneShare/src/app/playlist/playlist.component.scss
@@ -127,7 +127,7 @@ a{
 
 
 /* HTML: <div class="loader"></div> */
-.loader {
+.loaderCircle {
   width: 1em;
   aspect-ratio: 1;
   border-radius: 50%;
