--- a/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
+++ b/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
@@ -80,3 +80,5 @@
     <app-playlistList [playlists]="playlists"></app-playlistList>
   </div>
 </div>
+
+<div *ngIf="!user" class="loader mx-auto my-auto mt-5"></div>
