--- a/src/frontend/TuneShare/src/app/confirm-export/confirm-export.component.html
+++ b/src/frontend/TuneShare/src/app/confirm-export/confirm-export.component.html
@@ -22,7 +22,8 @@
   <div class="modal-content">
     <div class="modal-header">
       <h5 class="modal-title"
-          id="exportStatusLabel">Export running...</h5>
+          id="exportStatusLabel">Export running </h5>
+      <h5 style="height: 100%" class="align-items-end"><div class="loaderPoints mt-3 ms-1"></div></h5>
     </div>
     <div class="modal-body">
       This process can take some time.
