--- a/src/frontend/TuneShare/src/app/add-playlist/add-playlist.component.html
+++ b/src/frontend/TuneShare/src/app/add-playlist/add-playlist.component.html
@@ -11,7 +11,7 @@
     <h4 class="mb-3 text-center">Choose playlist to import</h4>
     <app-playlistList [playlists]="playlistsSpotify" [ngClass]="{ 'd-none': !(spotify && linkedSpotify)} "></app-playlistList>
     <app-playlistList [playlists]="playlistsApplemusic" [ngClass]="{'d-none' : !(!spotify && linkedApplemusic)}"></app-playlistList>
-    <div *ngIf="!loadingDoneS || !loadingDoneAm" class="text-center mt-5">
+    <div *ngIf="(!loadingDoneS || !loadingDoneAm) && !(!linkedSpotify && spotify || !linkedApplemusic && !spotify)" class="text-center mt-5">
       <div class="loader text-center mx-auto mb-1"></div>
     </div>
     <div *ngIf="empty && loadingDoneAm &&loadingDoneS" class="text-center mt-5"><h5>No
