--- a/src/frontend/TuneShare/src/app/playlist-rotate/playlist-rotate.component.html
+++ b/src/frontend/TuneShare/src/app/playlist-rotate/playlist-rotate.component.html
@@ -6,7 +6,7 @@
          [ngClass]="{ active: i === 0 }" *ngFor="let chunk of playlistChunks; let i = index">
       <div class="row mx-0" [ngClass]="{ 'row-cols-3' : !isMobile, 'row-cols-2' : isMobile  }">
         <div *ngFor="let playlist of chunk" [ngClass]="{ 'px-1':isMobile, 'px-2':!isMobile }">
-          <app-playlist [playlist]="playlist"></app-playlist>
+          <app-playlist [playlist]="playlist" (is_deleted)="playlistDeleted(playlist, $event)"></app-playlist>
         </div>
       </div>
     </div>
