--- a/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
+++ b/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
@@ -2,7 +2,8 @@
   <app-playlist
     class="col my-2 p-0" style="width: 21em"
     *ngFor="let playlist of playlists"
-    [playlist]="playlist">
+    [playlist]="playlist"
+    (is_deleted)="playlistDeleted(playlist, $event)">
   </app-playlist>
   <div class="col p-0" style="width: 21em; height: 0;"></div>
   <div class="col p-0" style="width: 21em; height: 0;"></div>
