--- a/src/frontend/TuneShare/src/app/playlist/playlist.component.scss
+++ b/src/frontend/TuneShare/src/app/playlist/playlist.component.scss
@@ -65,6 +65,10 @@
   cursor: pointer;
 }
 
+.addButton{
+  cursor: not-allowed;
+}
+
 .iconAddPlain{
   font-size: 1.2em;
   cursor: pointer;
@@ -125,42 +129,6 @@ a{
   box-shadow: 0px 0px 5px 0px rgba(149, 137, 159, 0.17);
 }
 
-
-/* HTML: <div class="loader"></div> */
-.loaderCircle {
-  width: 1em;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  border: 0.1em solid #4F4E57;
-  animation:
-    l20-1 0.8s infinite linear alternate,
-    l20-2 1.6s infinite linear;
-}
-@keyframes l20-1{
-  0%    {clip-path: polygon(50% 50%,0       0,  50%   0%,  50%    0%, 50%    0%, 50%    0%, 50%    0% )}
-  12.5% {clip-path: polygon(50% 50%,0       0,  50%   0%,  100%   0%, 100%   0%, 100%   0%, 100%   0% )}
-  25%   {clip-path: polygon(50% 50%,0       0,  50%   0%,  100%   0%, 100% 100%, 100% 100%, 100% 100% )}
-  50%   {clip-path: polygon(50% 50%,0       0,  50%   0%,  100%   0%, 100% 100%, 50%  100%, 0%   100% )}
-  62.5% {clip-path: polygon(50% 50%,100%    0, 100%   0%,  100%   0%, 100% 100%, 50%  100%, 0%   100% )}
-  75%   {clip-path: polygon(50% 50%,100% 100%, 100% 100%,  100% 100%, 100% 100%, 50%  100%, 0%   100% )}
-  100%  {clip-path: polygon(50% 50%,50%  100%,  50% 100%,   50% 100%,  50% 100%, 50%  100%, 0%   100% )}
-}
-@keyframes l20-2{
-  0%    {transform:scaleY(1)  rotate(0deg)}
-  49.99%{transform:scaleY(1)  rotate(135deg)}
-  50%   {transform:scaleY(-1) rotate(0deg)}
-  100%  {transform:scaleY(-1) rotate(-135deg)}
-}
-
-
-@media (max-width: 767px) {
-  .smallerfont {
-    font-size: small;
-  }
-  .smallerfontHeadline{
-    font-size: medium;
-  }
-}
 
 @media (max-width: 575px) {
   .smallerfont {
