--- a/src/frontend/TuneShare/src/app/authentication/registration/registration.component.html
+++ b/src/frontend/TuneShare/src/app/authentication/registration/registration.component.html
@@ -15,11 +15,36 @@
                     <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div data-mdb-input-init class="form-outline flex-fill mb-0">
                       <input [ngClass]="{
+                        'border-danger': displayName.invalid && (displayName.dirty || displayName.touched)
+                        }" type="email" id="displayName" class="form-control" formControlName="displayName" placeholder="Display Name"/>
+                      <label for="displayName" *ngIf="displayName.invalid && (displayName.dirty || displayName.touched)"
+                             class="text-danger">{{ displayNameErrorLabel }}</label>
+                      <label for="displayName" *ngIf="!(displayName.invalid && (displayName.dirty || displayName.touched))"
+                             class="text-danger"></label>
+                    </div>
+                  </div>
+
+                  <div class="d-flex flex-row align-items-center mb-2">
+                    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                    <div data-mdb-input-init class="form-outline flex-fill mb-0">
+                      <input [ngClass]="{
+                        'border-danger': username.invalid && (username.dirty || username.touched)
+                        }" type="email" id="username" class="form-control" formControlName="username" placeholder="Username"/>
+                      <label for="username" *ngIf="username.invalid && (username.dirty || username.touched)"
+                             class="text-danger">{{ usernameErrorLabel }}</label>
+                      <label for="username" *ngIf="!(username.invalid && (username.dirty || username.touched))"
+                             class="text-danger"></label>
+                    </div>
+                  </div>
+
+                  <div class="d-flex flex-row align-items-center mb-2">
+                    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                    <div data-mdb-input-init class="form-outline flex-fill mb-0">
+                      <input [ngClass]="{
                         'border-danger': email.invalid && (email.dirty || email.touched)
                         }" type="email" id="email" class="form-control" formControlName="email" placeholder="Email"/>
                       <label for="email" *ngIf="email.invalid && (email.dirty || email.touched)"
-                             class="text-danger">Email
-                        not valid</label>
+                             class="text-danger">{{ emailErrorLabel }}</label>
                       <label for="email" *ngIf="!(email.invalid && (email.dirty || email.touched))"
                              class="text-danger"></label>
                     </div>
@@ -42,7 +67,7 @@
                       </div>
                       <label for="password"
                              *ngIf="password.invalid && (password.dirty || password.touched)"
-                             class="text-danger">Password not strong enough</label>
+                             class="text-danger">{{ passwordErrorLabel }}</label>
                       <label for="password"
                              *ngIf="!(password.invalid && (password.dirty || password.touched))"
                              class="text-danger"></label>
@@ -54,7 +79,8 @@
                     <div data-mdb-input-init class="form-outline flex-fill mb-0">
                       <div class="input-group">
                         <input type="{{ showRepeatPassword ? 'text': 'password'}}" [ngClass]="{
-                        'border-danger': (repeatPassword.value != password.value || repeatPassword.invalid) && (repeatPassword.dirty || repeatPassword.touched)
+                        'border-danger': (repeatPassword.value != password.value || repeatPassword.invalid) &&
+                          (repeatPassword.dirty || repeatPassword.touched)
                         }" id="repeatPassword" class="form-control" formControlName="repeatPassword"
                                placeholder="Repeat password"/>
                         <span class="input-group-text">
