--- a/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
+++ b/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
@@ -54,26 +54,27 @@
       <span class="shareUsernameLogo">&#64;</span>{{ user.username }}
     </h5>
     </a>
-    <span>
-      <span *ngIf="!isMobile">  |  </span><div *ngIf="isMobile"></div>
-      <a target="{{ user.apple_music_id ? '_blank' : '_self' }}"
-         href="{{ user.apple_music_id ? 'https://music.apple.com/de/album/never-gonna-give-you-up/1559523357?i=1559523359' : '/settings' }}"
-         class="appleLink" title="{{ user.display_name }}'s Apple Music">
-        <h5 [ngClass]="{'fst-italic': !user.apple_music_id}" class="hideIfShrunk mx-auto">
-          <i class="bi-apple appleLogo"></i> {{ user.apple_music_id ? user.apple_music_id : "link now" }} <!--  TODO change to username-->
-        </h5>
-      </a>
-    </span>
-    <span>
-      <span class="hideIfShrunk mx-auto"><span *ngIf="!isMobile">  |  </span><div *ngIf="isMobile"></div></span>
-        <a target="{{ user.spotify_id ? '_blank' : '_self' }}"
-           href="{{ user.spotify_id ? 'https://music.apple.com/de/album/never-gonna-give-you-up/1559523357?i=1559523359' : '/settings'}}"
-           class="spotifyLink" title="{{ user.display_name }}'s Spotify">
-          <h5 [ngClass]="{'fst-italic': !user.spotify_id}" class="hideIfShrunk mx-auto">
-            <i class="bi-spotify spotifyLogo"></i> {{ user.spotify_id ? user.spotify_id : "link now" }}
-          </h5>
-        </a>
-      </span>
+<!--  Abfrage von Verlinkung  -->
+<!--    <span>-->
+<!--      <span *ngIf="!isMobile">  |  </span><div *ngIf="isMobile"></div>-->
+<!--      <a target="{{ user.apple_music_id ? '_blank' : '_self' }}"-->
+<!--         href="{{ user.apple_music_id ? 'https://music.apple.com/de/album/never-gonna-give-you-up/1559523357?i=1559523359' : '/settings' }}"-->
+<!--         class="appleLink" title="{{ user.display_name }}'s Apple Music">-->
+<!--        <h5 [ngClass]="{'fst-italic': !user.apple_music_id}" class="hideIfShrunk mx-auto">-->
+<!--          <i class="bi-apple appleLogo"></i> {{ user.apple_music_id ? "linked" : "link now" }}-->
+<!--        </h5>-->
+<!--      </a>-->
+<!--    </span>-->
+<!--    <span>-->
+<!--      <span class="hideIfShrunk mx-auto"><span *ngIf="!isMobile">  |  </span><div *ngIf="isMobile"></div></span>-->
+<!--        <a target="{{ user.spotify_id ? '_blank' : '_self' }}"-->
+<!--           href="{{ user.spotify_id ? 'https://music.apple.com/de/album/never-gonna-give-you-up/1559523357?i=1559523359' : '/settings'}}"-->
+<!--           class="spotifyLink" title="{{ user.display_name }}'s Spotify">-->
+<!--          <h5 [ngClass]="{'fst-italic': !user.spotify_id}" class="hideIfShrunk mx-auto">-->
+<!--            <i class="bi-spotify spotifyLogo"></i> {{ user.spotify_id ? "linked" : "link now" }}-->
+<!--          </h5>-->
+<!--        </a>-->
+<!--      </span>-->
   </div>
   <div class="mt-4 mb-5 px-4 mx-auto" style="width: 95%;">
     <h2 class="container text-center">Playlists</h2>
