implemented remove services from account

--- a/src/frontend/TuneShare/src/app/settings/settings.component.html
+++ b/src/frontend/TuneShare/src/app/settings/settings.component.html
@@ -5,8 +5,16 @@
       Linking
     </div>
     <div class="card-body">
-      <p><button class="btn" (click)="linkSpotify()" [disabled]="linkedSpotify">Link Spotify <i class="bi bi-check"></i></button></p>
-      <button class="btn" (click)="linkAppleMusic()" [disabled]="linkedAppleMusic">Link Apple Music <i class="bi bi-check"></i></button>
+      <p>
+        <button class="btn" (click)="linkSpotify()" [disabled]="linkedSpotify">Link Spotify
+          <i class="bi bi-check" *ngIf="linkedSpotify"></i>
+        </button>
+        <a (click)="removeSpotifyLink()" *ngIf="linkedSpotify"><i class="bi-trash-fill"></i></a>
+      </p>
+      <button class="btn" (click)="linkAppleMusic()" [disabled]="linkedAppleMusic">Link Apple Music
+        <i class="bi bi-check" *ngIf="linkedAppleMusic"></i>
+      </button>
+      <a (click)="removeAppleMusicLink()" *ngIf="linkedAppleMusic"><i class="bi-trash-fill"></i></a>
     </div>
   </div>
 </div>
