--- a/src/frontend/TuneShare/src/app/share/share.html
+++ b/src/frontend/TuneShare/src/app/share/share.html
@@ -1,4 +1,5 @@
 <div class="container mt-4 mx-auto text-center">
+  <h2>Track: <span *ngIf="this.track">{{ this.track.title }} - {{ this.track.artist }}</span></h2>
   <form (ngSubmit)="submitUrl(f)" #f=ngForm>
     <input id="url" class="w-75 p-1" placeholder="URL"
            style="border-color: #8a5ca3; background: white; border-radius: 1px; border-right: none"
@@ -12,4 +13,5 @@
     <p>Apple Music Link: <a href="{{ this.applemusicLink }}" target="_blank">{{ this.applemusicLink }}<div *ngIf="applemusicLink==''" class="loaderCircle d-inline-block ms-1"></div></a></p>
   </div>
   <p class="mt-3" *ngIf="!found">No title found!</p>
+  <img *ngIf="track" class="trackImg mt-3" src="{{ this.track?.cover_url}}" style="height: 45%; width: 45%">
 </div>
